--- a/styles/colors.less
+++ b/styles/colors.less
@@ -1,7 +1,7 @@
 @primary_color: #fc6320;
 @secondary_color: #fc401a;
-@background_color_body_0: #141a1e;
-@background_color_body_50: #5c6268;
-@background_color_body_73: #60666d;
-@background_color_body_100: #515359;
+@background_color_body_0: #fff;
+@background_color_body_50: #fff;
+@background_color_body_73: #fff;
+@background_color_body_100: #fff;
 @background_color_widget: rgb(66, 59, 59);
