some styling for  header and footer

--- a/styles/colors.less
+++ b/styles/colors.less
@@ -1,5 +1,5 @@
-@primary_color: #fc6320;
-@secondary_color: #fc401a;
+@primary_color: #428bca;
+@secondary_color: #1bd2fc;
 @background_color_body_0: #fff;
 @background_color_body_50: #fff;
 @background_color_body_73: #fff;
