--- a/styles/scidash.less
+++ b/styles/scidash.less
@@ -1,3 +1,93 @@
-#mainContainer{
-    color: black;
+@import "colors";
+
+.mainContainer{
+    margin: 0 auto;
+    height: 100%;
+    min-height: 100%;
+}
+
+.midContainer {
+    width: 100%;
+    padding: 1%;
+    position: fixed;
+    top: 70px;
+    left: 0;
+    right: 0;
+    bottom: 60px;
+    z-index: 100 !important;
+}
+
+#header {
+    color: @primary_color;
+}
+
+#headerSocialLinks {
+    height: 100%;
+    width: 15%;
+    text-align: right;
+    position: fixed;
+    right: 10px;
+    top: 18px;
+    > a, > span {
+        margin: 0 5px;
+    }
+}
+
+#headerLinks {
+    font-size: 0.9em;
+    font-weight: 400;
+    position: fixed;
+    left: 0px;
+    right: 0px;
+    top: 32px;
+    height: 30px;
+    text-align: center;
+    letter-spacing: 1px;
+
+    .activeImageHeader {
+        position: relative;
+    }
+
+    a {
+        margin: 0px 10px;
+    }
+}
+
+#scidash-logo {
+    background-image: url('../pages/images/scidash_logo.png');
+    background-size: 100% 100%;
+    height: 40px;
+    width: 160.5px;
+    position: fixed;
+    top: 21px;
+    left: 10px;
+}
+
+#footer-scidash {
+    color: @primary_color;
+    font-weight: 500;
+    clear: both;
+    position: absolute;
+    bottom: 0px;
+    width: 100%;
+    z-index: 10;
+    height: 60px;
+    margin-top: -60px;
+    font-size: 0.75em;
+
+    #footerLinks {
+        border-bottom: 1px solid;
+        border-top: 1px solid;
+        padding: 4px;
+        text-align: center;
+
+        a {
+            color: @primary_color;
+            margin: 0px 10px;
+        }
+    }
+    #footerDate {
+        margin-top: 8px;
+        text-align: center;
+    }
 }
