Changes from TODO list

--- a/styles/scidash.less
+++ b/styles/scidash.less
@@ -91,3 +91,9 @@
         text-align: center;
     }
 }
+
+.scidash-table {
+    .scidash-table-heading-cell{
+        vertical-align:top;
+    }
+}
