Cleared from warnings autocomplete, filters from and to, some updates

--- a/styles/scidash.less
+++ b/styles/scidash.less
@@ -96,4 +96,8 @@
     .scidash-table-heading-cell{
         vertical-align:top;
     }
+    .filter-label {
+        padding: 0px 10px;
+        font-weight: normal;
+    }
 }
