overflow scroll on mid cointainer + some minor styling

--- a/styles/colors.less
+++ b/styles/colors.less
@@ -1,4 +1,4 @@
-@primary_color: #b7c0c9;
+@primary_color: #8d959c;
 @secondary_color: #405d63;
 @background_color_body_0: #fff;
 @background_color_body_50: #fff;
