--- a/styles/scidash.less
+++ b/styles/scidash.less
@@ -4,17 +4,19 @@
     margin: 0 auto;
     height: 100%;
     min-height: 100%;
+    font-size: 12px;
 }
 
 .midContainer {
     width: 100%;
-    padding: 1%;
+    padding: 2%;
     position: fixed;
     top: 70px;
     left: 0;
     right: 0;
     bottom: 60px;
     z-index: 100 !important;
+    overflow-y: scroll;
 }
 
 #header {
