more styling + visual improvements

--- a/styles/colors.less
+++ b/styles/colors.less
@@ -1,5 +1,5 @@
-@primary_color: #8d959c;
-@secondary_color: #405d63;
+@primary_color: #5d6e72;
+@secondary_color: #304549;
 @background_color_body_0: #fff;
 @background_color_body_50: #fff;
 @background_color_body_73: #fff;
