--- a/styles/scidash.less
+++ b/styles/scidash.less
@@ -1,10 +1,16 @@
 @import "colors";
 
+body {
+    background: #8e9eab;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to bottom, #eef2f3, #8e9eab);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to bottom, #eef2f3, #8e9eab); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+
 .mainContainer{
     margin: 0 auto;
     height: 100%;
     min-height: 100%;
-    font-size: 12px;
+    font-size: 16px;
 }
 
 .midContainer {
@@ -20,14 +26,14 @@
 }
 
 #header {
-    color: @primary_color;
+    color: @secondary_color;
 
     a {
-        color: @primary_color !important;
+        color: @secondary_color !important;
     }
 
     a:hover {
-        color: @secondary_color !important;
+        color: @primary_color !important;
     }
 }
 
@@ -74,7 +80,7 @@
 }
 
 #footer-scidash {
-    color: @primary_color;
+    color: @secondary_color;
     font-weight: 500;
     clear: both;
     position: absolute;
@@ -92,12 +98,12 @@
         text-align: center;
 
         a {
-            color: @primary_color;
+            color: @secondary_color;
             margin: 0px 10px;
         }
 
         a:hover {
-            color: @secondary_color;
+            color: @primary_color;
         }
     }
     #footerDate {
@@ -107,12 +113,17 @@
 }
 
 .scidash-table {
+    color: @secondary_color;
     .scidash-table-heading-cell{
         vertical-align:top;
+        text-align: center;
     }
     .filter-label {
         padding: 0px 10px;
         font-weight: normal;
+    }
+    tbody {
+        font-size: 13px;
     }
 }
 
@@ -121,3 +132,4 @@
         display:none;
     }
 }
+
