--- a/styles/scidash.less
+++ b/styles/scidash.less
@@ -99,11 +99,17 @@
     .filter-label {
         padding: 0px 10px;
         font-weight: normal;
+        float:left;
     }
 }
 
-.scidash-autocomplete {
+.scidash-materialui-field {
+    float:right;
     div{
         display:none;
     }
+}
+
+.datepicker-wrapper {
+    float:left;
 }
