--- a/styles/scidash.less
+++ b/styles/scidash.less
@@ -1,9 +1,9 @@
 @import "colors";
 
 body {
-    background: #8e9eab;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to bottom, #eef2f3, #8e9eab);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to bottom, #eef2f3, #8e9eab); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: #ada996; /* fallback for old browsers */
+    background: -webkit-linear-gradient(to top, #ada996, #f2f2f2, #dbdbdb, #eaeaea); /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to top, #ada996, #f2f2f2, #dbdbdb, #eaeaea); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */ 
 }
 
 .mainContainer{
@@ -116,7 +116,7 @@ body {
     color: @secondary_color;
     .scidash-table-heading-cell{
         vertical-align:top;
-        text-align: center;
+        text-align: left;
     }
     .filter-label {
         padding: 0px 10px;
