--- a/styles/scidash.less
+++ b/styles/scidash.less
@@ -3,7 +3,7 @@
 body {
     background: #ada996; /* fallback for old browsers */
     background: -webkit-linear-gradient(to top, #ada996, #f2f2f2, #dbdbdb, #eaeaea); /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to top, #ada996, #f2f2f2, #dbdbdb, #eaeaea); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */ 
+    background: linear-gradient(to top, #ada996, #f2f2f2, #dbdbdb, #eaeaea); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
 .mainContainer{
@@ -132,6 +132,9 @@ body {
     float:right;
     div{
         display:none;
+    }
+    input {
+        box-shadow: none;
     }
 }
 
