color mapping label

--- a/styles/scidash.less
+++ b/styles/scidash.less
@@ -149,3 +149,21 @@ body {
 .griddle-pagination {
     text-align: center;
 }
+
+#colorMapGradientLabel {
+    width: 100%;
+    height: 10px;
+}
+
+.colorBlindGradient {
+    background: linear-gradient(to right, yellow, blue);
+}
+
+.defaultGradient {
+    background: linear-gradient(to right, red , green);
+}
+
+#controlsContainer {
+    width: 100%;
+    text-align: left;
+}
