--- a/styles/scidash.less
+++ b/styles/scidash.less
@@ -167,3 +167,9 @@ body {
     width: 100%;
     text-align: left;
 }
+
+.scidash-materialui-field {
+    font-size: 13px !important;
+    font-weight: normal !important;
+    padding-left: 3px !important;
+}
