more css from hell for autosuggest menus

--- a/styles/scidash.less
+++ b/styles/scidash.less
@@ -168,8 +168,24 @@ body {
     text-align: left;
 }
 
+/* Input fields adjustments */
 .scidash-materialui-field {
     font-size: 13px !important;
     font-weight: normal !important;
     padding-left: 3px !important;
+}
+
+/* Autosuggest adjustments */
+span[role=menuitem]{
+    font-size: 13px !important;
+    min-height: 30px !important;
+    line-height: 30px !important;
+
+    div div {
+        padding: 0px 5px 0px 5px !important;
+    }
+}
+
+div[role=menu]{
+    padding: 0px !important;
 }
