Fixes from checklist

--- a/styles/scidash.less
+++ b/styles/scidash.less
@@ -189,3 +189,8 @@ span[role=menuitem]{
 div[role=menu]{
     padding: 0px !important;
 }
+
+.suites-table{
+    width:900px;
+    margin:0 auto;
+}
