--- a/styles/scidash.less
+++ b/styles/scidash.less
@@ -38,12 +38,9 @@ body {
 }
 
 #headerSocialLinks {
+    z-index: 110;
     height: 100%;
-    width: 15%;
     text-align: right;
-    position: fixed;
-    right: 10px;
-    top: 18px;
     > a, > span {
         margin: 0 5px;
     }
