--- a/styles/scidash.less
+++ b/styles/scidash.less
@@ -123,6 +123,9 @@ body {
     tbody {
         font-size: 13px;
     }
+    .griddle-cell {
+        border-top:1px solid #aaa;
+    }
 }
 
 .scidash-materialui-field {
