--- a/styles/scidash.less
+++ b/styles/scidash.less
@@ -194,3 +194,11 @@ div[role=menu]{
     width:900px;
     margin:0 auto;
 }
+
+.centered-modal {
+    position: fixed !important;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) !important;
+    overflow-y: scroll;
+}
