--- a/styles/scidash.less
+++ b/styles/scidash.less
@@ -202,3 +202,11 @@ div[role=menu]{
     transform: translate(-50%, -50%) !important;
     overflow-y: scroll;
 }
+
+.loading-spinner {
+    font-size: 45px;
+    width: 45px;
+    height: 45px;
+    text-align: center;
+    overflow: visible;
+}
