Funky Columns fix, Suites filtering bug fix

--- a/styles/scidash.less
+++ b/styles/scidash.less
@@ -210,3 +210,8 @@ div[role=menu]{
     text-align: center;
     overflow: visible;
 }
+
+.avg-score-heading {
+    word-wrap: break-word;
+    max-width: 150px;
+}
