Build info icon, material ui settings button

--- a/styles/scidash.less
+++ b/styles/scidash.less
@@ -214,3 +214,11 @@ div[role=menu]{
     word-wrap: break-word;
     max-width: 150px;
 }
+
+.build-info-cell {
+    width: 100px;
+    max-width: 100px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
