--- a/styles/scidash.less
+++ b/styles/scidash.less
@@ -222,3 +222,11 @@ div[role=menu]{
     overflow: hidden;
     text-overflow: ellipsis;
 }
+
+.eye-icon {
+    margin: 10px auto;
+    font-size: 25px;
+    display: block;
+    text-align: center;
+    cursor: pointer;
+}
