--- a/styles/scidash.less
+++ b/styles/scidash.less
@@ -224,9 +224,8 @@ div[role=menu]{
 }
 
 .eye-icon {
-    margin: 10px auto;
+    margin: 10px 39px;
     font-size: 25px;
     display: block;
-    text-align: center;
     cursor: pointer;
 }
