Migrated to Griddle, sorting is available now

--- a/styles/scidash.less
+++ b/styles/scidash.less
@@ -224,8 +224,16 @@ div[role=menu]{
 }
 
 .eye-icon {
-    margin: 10px 39px;
+    margin: 4px 39px;
     font-size: 25px;
     display: block;
     cursor: pointer;
+}
+
+.table .score-matrix-cell {
+    padding: 0px;
+}
+
+.no-results-table th {
+    text-align: right;
 }
