--- a/styles/scidash.less
+++ b/styles/scidash.less
@@ -191,7 +191,7 @@ div[role=menu]{
 }
 
 .suites-table{
-    width:900px;
+    width: 90%;
     margin:0 auto;
 }
 
@@ -221,4 +221,23 @@ div[role=menu]{
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+}
+
+.eye-icon {
+    margin: 4px 39px;
+    font-size: 25px;
+    display: block;
+    cursor: pointer;
+}
+
+.table .score-matrix-cell {
+    padding: 0px;
+}
+
+.no-results-table th {
+    text-align: right;
+}
+
+.model-url{
+    word-wrap: break-word;
 }
