--- a/styles/scidash.less
+++ b/styles/scidash.less
@@ -66,7 +66,7 @@ body {
 }
 
 #scidash-logo {
-    background-image: url('../pages/images/scidash_logo.png');
+    background-image: url('../assets/scidash_logo.png');
     background-size: 100% 100%;
     height: 47px;
     width: 160.5px;
@@ -240,3 +240,4 @@ div[role=menu]{
 .model-url{
     word-wrap: break-word;
 }
+
