tilt table header titles

--- a/styles/scidash.less
+++ b/styles/scidash.less
@@ -113,6 +113,9 @@ body {
     .scidash-table-heading-cell{
         vertical-align:top;
         text-align: left;
+        height: 150px;
+        max-width: 80px;
+        transform: translate(25px,45px) rotate(315deg);
     }
     .filter-label {
         padding: 0px 10px;
@@ -127,6 +130,11 @@ body {
     }
 }
 
+.scidash-test-table-heading-cell{
+        vertical-align:top;
+        text-align: left;
+}
+    
 .scidash-materialui-field {
     float:right;
     div{
