--- a/styles/scidash.less
+++ b/styles/scidash.less
@@ -113,9 +113,6 @@ body {
     .scidash-table-heading-cell{
         vertical-align:top;
         text-align: left;
-        height: 150px;
-        max-width: 80px;
-        transform: translate(25px,45px) rotate(315deg);
     }
     .filter-label {
         padding: 0px 10px;
@@ -130,9 +127,30 @@ body {
     }
 }
 
-.scidash-tilted-titles-table-heading-cell{
+.scidash-tilted-titles-table {
+    color: @secondary_color;
+    .scidash-tilted-titles-table-heading-cell{
         vertical-align:top;
         text-align: left;
+        height: 150px;
+        max-width: 80px;
+        transform: translate(60px,45px) rotate(315deg);
+	}
+    .filter-label {
+        padding: 0px 10px;
+        font-weight: normal;
+        float:left;
+    }
+    tbody {
+        font-size: 13px;
+    }
+    
+    th{
+        vertical-align:top;
+    }
+    .griddle-cell {
+        border-top:1px solid #aaa;
+    }
 }
     
 .scidash-materialui-field {
