fixing broken tilted titles on avg score details component

--- a/styles/scidash.less
+++ b/styles/scidash.less
@@ -133,8 +133,9 @@ body {
         vertical-align:top;
         text-align: left;
         height: 150px;
-        max-width: 80px;
-        transform: translate(60px,45px) rotate(315deg);
+        max-width: 50px;
+        word-wrap: break-word;
+        transform: translate(60px,35px) rotate(315deg);
 	}
     .filter-label {
         padding: 0px 10px;
