--- a/styles/scidash.less
+++ b/styles/scidash.less
@@ -156,7 +156,7 @@ body {
 }
 
 .hideAll-column {
-    /* Adjustments to */
+    /* Adjustments to column with hide all buttons*/
     th:last-child{
     	transform : translate(80px, 100px) rotate(315deg);
     }
