style changes and css fixes

--- a/styles/scidash.less
+++ b/styles/scidash.less
@@ -158,24 +158,38 @@ body {
     vertical-align: top;
     text-align: left;
     max-width: 220px;
-    height: 200px;
+    height: 20px;
     max-height: 150px;
     width: 225px;
-    transform: translate(35px, 35px) rotate(315deg);
+    transform: translate(-25px, -70px) rotate(315deg);
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
 }
 
+.last-heading{
+    transform: translate(-20px, -55px) rotate(315deg);
+    width: 175px;
+    max-width: 200px;
+}
+
 .hideAll-column {
     /* Adjustments to column with hide all buttons*/
     th:last-child{
-    	padding-left : 20px;
+    	padding-left : 5px;
     }
 }
 
+#showAllButton{
+	height: 27px !important;
+}
+
 .modelName-row-heading{
-	padding: 0px 20px 5px 0;
+	padding-right: 5px;
+    text-align: right;
+    font-weight: bold;
+    font-size : 14px;
+    font-family : Roboto, sans-serif;
 }
 
 .scidash-materialui-field {
@@ -248,7 +262,26 @@ div[role=menu]{
 
 .modal-table{
     width: auto;
-    margin:55px auto;
+    margin:0 auto;
+}
+
+.modal-table th {
+  height: 140px;
+  white-space: nowrap;
+  padding: 5px 10px;
+}
+
+.modal-table thead > tr {
+	height : 165px;
+}
+
+.modal-table th > div > span {
+  padding: 5px 10px;
+}
+
+.rotatedTitle {
+	width : 200px;
+	height : 200px;
 }
 
 .centered-modal {
@@ -275,7 +308,7 @@ div[role=menu]{
 }
 
 .eye-icon {
-    margin: 4px 39px;
+    margin: 4px 15px;
     font-size: 25px;
     display: block;
     cursor: pointer;
