add models skeleton

--- a/styles/scidash.less
+++ b/styles/scidash.less
@@ -266,6 +266,16 @@ body {
     padding-left: 3px !important;
 }
 
+// /* Autosuggest adjustments */     IT REPLACES THE COMMENTED LINES BELOW
+.autosuggest span{
+  font-size: 13px !important;
+  min-height: 30px !important;
+  line-height: 30px !important;
+
+  div div {
+      padding: 0px 5px 0px 5px !important;
+  }
+}
 // /* Autosuggest adjustments */
 // span[role=menuitem]{
 //     font-size: 13px !important;
@@ -277,9 +287,9 @@ body {
 //     }
 // }
 
-// div[role=menu]{
-//     padding: 0px !important;
-// }
+div[role=menu]{
+    padding: 0px !important;
+}
 
 .suites-table{
     width: 90%;
