--- a/styles/scidash.less
+++ b/styles/scidash.less
@@ -360,3 +360,131 @@ div[role=menu]{
 .model-url{
     word-wrap: break-word;
 }
+
+/**
+ * Tooltip Styles   The tooltip will OVERFLOW, so make sure to allow overflow in the parent!!!
+ */
+
+/* Add this attribute to the element that needs a tooltip */
+[data-tooltip] {
+  overflow: visible;
+  position: relative;
+  z-index: 2;
+  cursor: pointer;
+}
+
+/* Hide the tooltip content by default */
+[data-tooltip]:before,
+[data-tooltip]:after {
+  visibility: hidden;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+  filter: "progid: DXImageTransform.Microsoft.Alpha(Opacity=0)";
+  opacity: 0;
+  pointer-events: none;
+}
+
+/* Position tooltip above the element */
+[data-tooltip]:before {
+  position: absolute;
+  bottom: 100%;
+  left: 50%;
+  margin-bottom: 5px;
+  margin-left: -80px;
+  padding: 7px;
+  width: 160px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  border-radius: 10px;
+  background-color: #000;
+  background-color: hsla(0, 0%, 20%, 0.9);
+  color: #fff;
+  content: attr(data-tooltip);
+  text-align: center;
+  font-size: 14px;
+  line-height: 1.2;
+}
+
+/* Triangle hack to make tooltip look like a speech bubble */
+[data-tooltip]:after {
+  position: absolute;
+  bottom: 100%;
+  left: 50%;
+  margin-left: -5px;
+  width: 0;
+  border-top: 5px solid #000;
+  border-top: 5px solid hsla(0, 0%, 20%, 0.9);
+  border-right: 5px solid transparent;
+  border-left: 5px solid transparent;
+  content: " ";
+  font-size: 0;
+  line-height: 0;
+}
+
+/* Show tooltip content on hover */
+[data-tooltip]:hover:before,
+[data-tooltip]:hover:after {
+  visibility: visible;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
+  filter: "progid: DXImageTransform.Microsoft.Alpha(Opacity=100)";
+  opacity: 1;
+}
+
+
+::-webkit-scrollbar,
+::-webkit-scrollbar-thumb {
+  width: 0.4em;
+  border-radius: 13px;
+  background-clip: padding-box;
+}
+
+.scrolling {
+    width: 100%;
+    height: 240px;
+    display: flex; 
+    flex-direction: row;
+    .scrolling2 {
+        flex: 1;
+        margin-left: 15px;
+        margin-right: 15px;
+        color: transparent;
+        // border: 1px solid black; //UNCOMMENT TO SEE LAYOUT
+        // border-radius: 25px;
+        position: relative;
+        .scrolling3 {
+            width: 98%;
+            height: 200px !important;
+            overflow-y: auto;
+            // border: 1px solid black;
+            // border-radius: 25px;
+            position: absolute;
+            top: 40px;
+            margin-right: 10px;
+            color: rgba(0, 0, 0, 0.0);
+            
+        };
+    };
+};
+.scrolling2:hover .scrolling3 {
+    color: rgba(0, 0, 0, 0.5);
+    cursor: pointer;
+    transition: color 1s ease-out;
+};
+.scrolling2:hover {
+    ::-webkit-scrollbar-thumb { 
+        visibility: visible;
+    };
+}
+
+.scrolling3::-webkit-scrollbar,
+.scrolling3::-webkit-scrollbar-thumb {
+  width: 26px;
+  border-radius: 13px;
+  background-clip: padding-box;
+  border: 10px solid transparent;
+}
+
+.scrolling3::-webkit-scrollbar-thumb { 
+    visibility: hidden;
+    background-color: rgba(0,0,0,0.01);
+    box-shadow: inset 0 0 0 10px;
+}
