--- a/styles/scidash.less
+++ b/styles/scidash.less
@@ -444,21 +444,19 @@ div[role=menu]{
     flex-direction: row;
     .scrolling2 {
         flex: 1;
+        height: 100%;
         margin-left: 15px;
         margin-right: 15px;
-        color: transparent;
+        // color: transparent;
         // border: 1px solid black; //UNCOMMENT TO SEE LAYOUT
         // border-radius: 25px;
         position: relative;
         .scrolling3 {
             width: 98%;
-            height: 200px !important;
+            height: 200px;
             overflow-y: auto;
             // border: 1px solid black;
-            // border-radius: 25px;
-            position: absolute;
-            top: 40px;
-            margin-right: 10px;
+            border-radius: 25px;
             color: rgba(0, 0, 0, 0.0);
             
         };
