add scheduler table

--- a/styles/scidash.less
+++ b/styles/scidash.less
@@ -127,6 +127,16 @@ body {
   display: flex;
 }
 
+input:focus {
+  outline: none!important; 
+  border: none!important;
+  box-shadow: none!important;
+}
+input {
+  outline: none!important; 
+  border: none!important;
+  box-shadow: none!important;
+}
 .edit-clone-test {
   float: right;
   > button {
