work in progress for styling login buttons

--- a/styles/scidash.less
+++ b/styles/scidash.less
@@ -578,3 +578,27 @@ div[role=menu] {
         margin-top: 100px;
     }
 }
+
+.loginButton {
+	a{
+		background-color : blue !important;
+	}
+
+	span{
+	    font-size : 15px !important;
+	    color : white !important;
+	    font-weight : bolder !important;
+	}
+}
+
+.signUpButton {
+	a{
+		background-color : lightgrey !important;
+	}
+
+	span{
+	    font-size : 15px !important;
+	    color : white !important;
+	    font-weight : bolder !important;
+	}
+}
