--- a/styles/scidash.less
+++ b/styles/scidash.less
@@ -579,11 +579,7 @@ div[role=menu] {
     }
 }
 
-.loginButton {
-	a{
-		background-color : blue !important;
-	}
-
+.userButton {
 	span{
 	    font-size : 15px !important;
 	    color : white !important;
@@ -591,14 +587,20 @@ div[role=menu] {
 	}
 }
 
+.loginButton {
+	a{
+		background-color : blue !important;
+	}
+}
+
 .signUpButton {
 	a{
 		background-color : lightgrey !important;
 	}
+}
 
-	span{
-	    font-size : 15px !important;
-	    color : white !important;
-	    font-weight : bolder !important;
+.logoutButton {
+	a{
+		background-color : lightgrey !important;
 	}
 }
