save work in progress

--- a/styles/scidash.less
+++ b/styles/scidash.less
@@ -591,6 +591,23 @@ div[role=menu] {
 	a{
 		background-color : blue !important;
 	}
+	width : 96px;
+}
+
+.loggedButton {
+	div{
+		background-color : blue !important;
+	}
+	
+	span{
+	    text-overflow: ellipsis;
+	}
+	
+	width : 96px;
+}
+
+.loggedIcon{
+    left: 10px;
 }
 
 .signUpButton {
