Save login popover. Needs more polishing

--- a/styles/scidash.less
+++ b/styles/scidash.less
@@ -585,13 +585,14 @@ div[role=menu] {
 	    color : white !important;
 	    font-weight : bolder !important;
 	}
+	
+	width : 96px;
 }
 
 .loginButton {
 	a{
 		background-color : blue !important;
 	}
-	width : 96px;
 }
 
 .loggedButton {
@@ -621,6 +622,11 @@ div[role=menu] {
 		background-color : lightgrey !important;
 	}
 }
+
+.userDetail{
+	height : 50px;
+}
+
 .drawer-icon{
     font-size: 30px;
 }
