Model parameters support

--- a/styles/scidash.less
+++ b/styles/scidash.less
@@ -567,6 +567,11 @@ div[role=menu] {
             margin-right: 15px;
             width: 200px;
         }
+        .icons {
+            flex: 1;
+            margin-left: 15px;
+            position: relative;
+        }
     }
     .actions-button {
         width: 100px;
@@ -613,4 +618,10 @@ div[role=menu] {
 
 .drawer-icon{
     font-size: 30px;
+}
+
+.scidash-table-filter{
+    border:1px solid #cccccc !important;
+    padding: 10px !important;
+    width: 100%;
 }
