align select field button with bottom

--- a/styles/scidash.less
+++ b/styles/scidash.less
@@ -630,3 +630,7 @@ div[role=menu] {
     color: #aaa;
     font-size: 20px;
 }
+
+#testFormSelectClass,#modelFormSelectClass {
+	margin-top : 28px !important;
+}
