--- a/styles/scidash.less
+++ b/styles/scidash.less
@@ -590,7 +590,7 @@ div[role=menu] {
 	    color : white !important;
 	    font-weight : bolder !important;
 	}
-	
+
 	width : 96px;
 }
 
@@ -629,4 +629,8 @@ div[role=menu] {
 .new-line{
     color: #aaa;
     font-size: 20px;
+}
+
+#testFormSelectClass,#modelFormSelectClass {
+	margin-top : 28px !important;
 }
