WIP: Locked/deprecated logic

--- a/styles/scidash.less
+++ b/styles/scidash.less
@@ -631,6 +631,11 @@ div[role=menu] {
     font-size: 20px;
 }
 
-#testFormSelectClass,#modelFormSelectClass {
-	margin-top : 28px !important;
+#testFormSelectClass,
+#modelFormSelectClass {
+    margin-top: 28px !important;
+}
+
+.deprecated {
+    background-color: rgba(255, 0, 0, 0.5)
 }
